5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4501/executions/1646_2729.log
== TEST (2019-04-15 23:39:26) 
-- CODE:
a=int(input("1: "))
b=int(input("2: "))
if(soma):
	soma=a+b
	print(soma)
if(soma):
	soma=a!=b
	print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(soma):
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:40:13) 
-- CODE:
a=int(input("1: "))
b=int(input("2: "))
if(a+b):
	soma=a+b
	print(soma)
if(a!=b):
	soma=a!=b
	print(soma)
-- OUTPUT:
19
True
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:40:50) 
-- CODE:
a=int(input("1: "))
b=int(input("2: "))
if(a-b):
	soma=a+b
	print(soma)
if(a!=b):
	soma=a!=b
	print(soma)
-- OUTPUT:
19
True
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:41:14) 
-- CODE:
a=int(input("1: "))
b=int(input("2: "))
if(a-b):
	soma=a-b
	print(soma)
if(a!=b):
	soma=a!=b
	print(soma)
-- OUTPUT:
-1
True
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
